2004-10-31  Mark Kettenis  <kettenis@gnu.org>

	* tramp-frame.c (tramp_frame_prepend_unwinder): Set unwinder type
	from TRAMP_FRAME frame type.

2004-10-31  Andrew Cagney  <cagney@gnu.org>

	* mdebugread.c (parse_procedure): Wrap use of RA_REGNUM in #ifdef.

	* mips-tdep.c (mips_ignore_helper): Delete.
	* config/mips/tm-mips.h (DEPRECATED_IGNORE_HELPER_CALL): Delete.
	* infrun.c (handle_inferior_event): Delete #ifdef
	DEPRECATED_IGNORE_HELPER_CALL code.

	* config/mips/tm-mips.h (RA_REGNUM): Delete.

2004-10-31  Mark Kettenis  <kettenis@gnu.org>

	* i386v4-nat.c (supply_gregset, supply_fpregset, fill_gregset)
	(fill_fpregset): Do not compile for 64-bit systems.
	* i386-sol2-nat.c: Don't include "i386v4-nat.c".
	* Makefile.in (i386-sol2-nat.o): Update dependencies.
	* config/i386/i386sol2.mh (NATDEPFILES): Add back i386v4-nat.c.

2004-10-30  Andrew Cagney  <cagney@gnu.org>

	* mdebugread.h: Include "coff/sym.h" and "coff/symconst.h".
	(struct mdebug_extra_func_info): Define.
	* config/alpha/tm-alpha.h: Delete same.
	* config/mips/tm-mips.h: Delete same.
	* mdebugread.c: Delete same.
	* Makefile.in: Update dependencies.
	* mips-mdebug-tdep.c: Include "mdebugread.h".

	* objfiles.c: Include "mdebugread.h".
	* mdebugread.c: Include "mdebugread.h".
	(ecoff_relocate_cfi): Delete.
	* config/alpha/tm-alpha.h (ecoff_relcate_cfi): Delete.
	* config/mips/tm-mips.h (ecoff_relcate_cfi): Delete.
	* mdebugread.h (ecoff_relocate_efi): New file.
	* Makefile.in: Update dependencies.
	
	* mips-tdep.c (struct frame_extra_info): Delete.
	(temp_proc_desc): Delete.

	* config/alpha/tm-alpha.h (MDEBUG_EFI_SYMBOL_NAME): Rename
	MIPS_EFI_SYMBOL_NAME.
	(mips_extra_func_info_t, mips_extra_func_info): Delete.
	(struct mdebug_extra_func_info): Replace struct
	alpha_extra_func_info and alpha_extra_func_info_t.
	* config/mips/tm-mips.h (MDEBUG_EFI_SYMBOL_NAME): Rename
	MIPS_EFI_SYMBOL_NAME.
	(struct mdebug_extra_func_info): Replace struct
	alpha_extra_func_info and alpha_extra_func_info_t.